@@ -105,6 +105,7 @@ public:
     // V91: Added raw image shaders
     // V92: Added anisotropic filtering to SkSamplingOptions
     // V94: Removed local matrices from SkShaderBase. Local matrices always use SkLocalMatrixShader.
+    // V95: SkImageFilters::Shader only saves SkShader, not a full SkPaint
 
     enum Version {
         kPictureShaderFilterParam_Version   = 82,
@@ -120,6 +121,7 @@ public:
         kAnisotropicFilter                  = 92,
         kBlend4fColorFilter                 = 93,
         kNoShaderLocalMatrix                = 94,
+        kShaderImageFilterSerializeShader   = 95,
 
         // Only SKPs within the min/current picture version range (inclusive) can be read.
         //
@@ -145,7 +147,7 @@ public:
         // Contact the Infra Gardener (or directly ping rmistry@) if the above steps do not work
         // for you.
         kMin_Version     = kPictureShaderFilterParam_Version,
-        kCurrent_Version = kNoShaderLocalMatrix
+        kCurrent_Version = kShaderImageFilterSerializeShader
     };
 };
 
